force-app/main/default/objects/BillingEventRaised__e/BillingEventRaised__e.object-meta.xml
<CustomObject>
    <description>Published when something billable occurs (e.g. a milestone is achieved). The Billing module subscribes and materializes a BillingEvent__c record.</description>
    <label>Billing Event Raised</label>
    <pluralLabel>Billing Event Raised Events</pluralLabel>
</CustomObject>