force-app/main/default/objects/BillingEventRaised__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of the billable item.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>