force-app/main/default/objects/BillingEventRaised__e/fields/Engagement_Id__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Id__c</fullName>
    <description>Engagement the billable amount belongs to.</description>
    <label>Engagement Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>