force-app/main/default/objects/BillingEventRaised__e/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <description
  >Id of the source record (e.g. milestone) that raised the event.</description>
    <label>Source Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>